Update spacing, add class to utility, fix tailwind - Update spacing, add negative and directionalvalues for margin, padding and gap - Remove old font size utility, add tailwind font-size classes - Fix package.json error on tailwind template

--- a/packages/create-mufferplate/templates/template-single-custom/src/css/custom_utilities/_generator.scss
+++ b/packages/create-mufferplate/templates/template-single-custom/src/css/custom_utilities/_generator.scss
@@ -11,8 +11,9 @@
 
 @include generate_utilities();
 @include generate_cols();
-@include generate_spacing();
-@include generate_font_size();
+@include generate_margin();
+@include generate_padding();
+@include generate_gap();
 @include generate_opacity();
 @include generate_positions();
 
@@ -21,8 +22,9 @@
     @media screen and (min-width: #{$val}) {
       @include generate_cols($key);
       @include generate_utilities($key);
-      @include generate_spacing($key);
-      @include generate_font_size($key);
+      @include generate_margin($key);
+      @include generate_padding($key);
+      @include generate_gap($key);
       @include generate_opacity($key);
       @include generate_positions($key);
     }
@@ -49,8 +51,9 @@
       $cur-key: list.nth($key, 1);
       @media screen and (max-width: #{$previous-val - 1}) {
         @include generate_utilities($cur-key);
-        @include generate_spacing($cur-key);
-        @include generate_font_size($cur-key);
+        @include generate_margin($cur-key);
+        @include generate_padding($cur-key);
+        @include generate_gap($cur-key);
         @include generate_opacity($cur-key);
         @include generate_positions($cur-key);
       }
